--- a/package.json
+++ b/package.json
@@ -161,7 +161,7 @@
     "serialize-javascript": "^1.3.0",
     "serviceworker-webpack-plugin": "^0.2.0",
     "sinon": "2.0.0-pre",
-    "styled-components": "latest",
+    "styled-components": "1.4.4",
     "svg-react-loader": "^0.3.6",
     "utils": "^0.3.1",
     "webpack": "2.1.0-beta.19"
